Move the screens and assumptions into docs and shorten the README